# ceng-407-408-2025-2026-Helma-AI-HealthMate-AI-Powered-Elderly-Care-Assistant

./: README.md
Helma-AI-Backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_tests.py
Helma-AI-Backend/app/: config.py  database.py  main.py
Helma-AI-Backend/app/schematics/: student.py
Helma-AI-Model/: __init__.py  calibration.py  fusion.py  interfaces.py  pipeline.py  smoothing.py
Helma-AI-Model/adapters/: __init__.py  audio_prosody_stub.py  audio_ser_wav2vec.py  text_classifier.py  text_qwen_llm.py  vision_fer.py  vision_hf_imagecls.py  vision_llava_stub.py
Helma-AI-Model/segmenters/: asr_whisper.py  frame_sampling.py  io_utils.py  video_to_segments.py
Helma-AI-Website/: 404.html  index.html  script.js  style.css
